--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "Rahul Resume",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#8B5CF6",
+    "theme_color": "#8B5CF6",
     "description": "Rahul Jallapalli's Professional Resume",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
